Bug 78606 - Converting odt-document to docx: Header will be lost if document contains a (protected) section at the top
Summary: Converting odt-document to docx: Header will be lost if document contains a (...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.0.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-12 14:18 UTC by ulkitz
Modified: 2016-09-19 18:09 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Test document with a header and a section (6.94 KB, application/vnd.oasis.opendocument.text)
2014-05-12 14:18 UTC, ulkitz
Details
The document as shown by LO (7.29 KB, image/png)
2014-05-12 14:19 UTC, ulkitz
Details
The document as shown by MS-Word (6.68 KB, image/png)
2014-05-12 14:20 UTC, ulkitz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ulkitz 2014-05-12 14:18:34 UTC
Created attachment 98923 [details]
Test document with a header and a section

An odt-document containing a protected section and a header looses the header if saved in Microsoft docx-format.

Steps to reproduce:

1. Open the attached file Section Export.odt
2. Save it as docx-file
3. Open it with MS-Word and find that MS Office indeed shows a header in the document, but this header is empty.
Comment 1 ulkitz 2014-05-12 14:19:57 UTC
Created attachment 98924 [details]
The document as shown by LO
Comment 2 ulkitz 2014-05-12 14:20:15 UTC
Created attachment 98925 [details]
The document as shown by MS-Word
Comment 3 Jorendc 2014-05-17 09:59:38 UTC
Already reproducible using LibreOffice 4.2.4 -> marking as such.

I can reproduce it too using Version: 4.3.0.0.alpha1+
Build ID: 48eccfb812284f43ba24c3be3903537ce954944d
TinderBox: Win-x86@39, Branch:master, Time: 2014-05-16_00:35:19

Kind regards,
Joren
Comment 4 Cor Nouws 2014-06-22 14:13:44 UTC
works OK if there is an enter before the section
Comment 5 Cor Nouws 2014-06-22 14:19:40 UTC
was OK in 4.0.6, but not in the first 4.1.0 I have available.

(would not be surprised if this is related to the changed behaviour in Headings/Footers first&following pages..)
Comment 6 Yousuf Philips (jay) (retired) 2014-12-06 12:30:14 UTC
This is not a regression from my testing of 3.3.0, 3.6.7, and 4.0.6, as none of them output a docx that has the header which appears in Word 2013.
Comment 7 Matthew Francis 2014-12-06 12:40:59 UTC
I would bibisect this, but I could not reproduce it having ever worked.

In addition to Jay Philips' reproductions using MS Word above, converting the sample file to .docx does not result in a header for me on the following versions when reopened with LibreOffice:
- 4.0.6.2 release
- The start of the 43all bibisect repository (3.5.0)
- The end of the 43all bibisect repository
- Current 4.5 master


-> Setting Version:3.3.0 (as OOo/AOO have never been able to save .docx, this isn't inherited but a genuine day 1 LO bug)
-> Removing Whiteboard:bibisectRequest and Keywords:regression

Would anyone intending to re-add this as a regression please document their reproduction steps in as much detail as possible.
Comment 8 Cor Nouws 2014-12-06 21:58:31 UTC
(In reply to Cor Nouws from comment #5)
> was OK in 4.0.6, but not in the first 4.1.0 I have available.

Indeed, my test there was wrong. From the files saved in the various versions, I see that I erroneously saved as .odt is stead of .docx. Apologies,
Cor
Comment 9 A (Andy) 2015-04-17 21:45:13 UTC
Reproducible with LO 4.4.1.2, Win 8.1
Comment 10 Commit Notification 2015-04-21 08:05:34 UTC
Eilidh McAdam committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f10ab3425f02a4caea22b2bdbf60a731bd059419

tdf#78606: Write DOCX header even if section is first paragraph

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2015-04-21 08:06:55 UTC
Eilidh McAdam committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=362c1b188d92b29bfcdad9e6c0bad50954131f11

tdf#78606: unittest for docx section header export bug

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Xisco Faulí 2016-09-15 22:05:41 UTC
Hello,
Is this bug fixed?
If so, could you please close it as RESOLVED FIXED?
Comment 13 Cor Nouws 2016-09-19 18:09:25 UTC
indeed fixed
Comment 14 Cor Nouws 2016-09-19 18:09:42 UTC
verified in master 20160919