tdf#78606: Write DOCX header even if section is first paragraph

Header flags are now set prior to export if a section is the first
thing in the document (ODF -> DOCX).

Change-Id: I84ba61c11da78a012938163d986ee5fcd301d405
Reviewed-on: https://gerrit.libreoffice.org/15369
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>